# saleae-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: example.rs  long_capture.rs
src/: client.rs  device.rs  lib.rs  performance.rs  request.rs  response.rs  samplerate.rs
tests/: client.rs  device.rs  request.rs  response.rs  samplerate.rs
